# IMGD3000PROJ2

./: .gitignore  CMakeLists.txt  DESIGN_DOCUMENT  DESIGN_DOCUMENT.docx  IMGD3000PROJ2.rar  IMGD3000PROJ2b_part1.rar  IMGD3000PROJ2b_part2.rar  Readme
CMake/: FindSourceFiles.cmake  GenerateVcxprojUserSettings.cmake  ScanSourceFiles.cmake  SourceFileScanner.cmake
IMGD3000PROJ2_part2/: CMakeLists.txt  README
IMGD3000PROJ2_part2/CMake/: SetOutputDirectories.cmake
IMGD3000PROJ2_part2/Project2/: CMakeLists.txt
Project1/: CMakeLists.txt
Project1/src/: game.cpp
Project2/: CMakeLists.txt
Project2/include/: Bullet.h  GameOverFlag.h  Hero.h  MadSquare.h  Plataform.h  Platform.h  Suicider.h  Trap.h
Project2/src/: Bullet.cpp  Explosion.cpp  GameOver.cpp  GameStart.cpp  GameWin.cpp  Hero.cpp  MadSquare.cpp  Plataform.cpp  Platform.cpp  Saucer.cpp  Star.cpp  Suicider.cpp  Trap.cpp  WinFlag.cpp  game.cpp  game_cpp
Project3/: CMakeLists.txt
Project3/include/: GameOver.h  GameStart.h  GameWin.h  Hero.h  Platform.h  Suicider.h  WinFlag.h
Project3/src/: GameOver.cpp  GameOverFlag.cpp  GameWin.cpp  Hero.cpp  Platform.cpp  Suicider.cpp  Trap.cpp  WinFlag.cpp  game.cpp
bin_debug/sprites/: bullet-left-spr.txt  bullet-spr.txt  bullet1-spr.txt  gameoverflag-spr.txt  gamestart-spr.txt  gamewin-spr.txt  madsquare-spr.txt  sheep.json  suicider-spr.txt  titansaucer-spr.txt  trap-spr.txt  winflag-spr.txt
bin_debug/sprites/hero/: hero-jump-spr.txt  hero-walk-left-spr.txt  hero-walk-right-spr.txt
